--- a/products/templates/product-page.html
+++ b/products/templates/product-page.html
@@ -21,25 +21,27 @@
         <div class="container">
             <div class="d-flex flex-wrap flex-lg-nowrap">
                 {% if product_images.count == 1 %}
-                <div style="width: 100%">
-                <img src="{{ product_images.0.image.url }}" style="margin: auto;"/>
+                <div class="w-100 text-center">
+                    <img src="{{ product_images.0.image.url }}" style="margin: auto;" alt=""/><br>
+                    <a href="{% url 'products:product_image' product_images.0.product.id product_images.0.sequence 'original' %}">View Full Image</a>
                 </div>
                 {% else %}
-                <div id="productCarousel" class="carousel carousel-dark slide lazy ms-md-120" data-bs-interval="false" data-bs-ride="carousel">
+                <div id="productCarousel" class="carousel carousel-dark slide lazy ms-md-120" style="padding-bottom: 50px;" data-bs-interval="false" data-bs-ride="carousel">
                     <div class="carousel-indicators d-none d-md-inline" style="display: block; margin: 0; padding: 0; margin-left: -100px; width: 100px; z-index: 0;">
                         {% for product_image in product_images %}
-                            {% if forloop.counter0 < 5 %}
+                            {% if forloop.counter0 < 4 %}
                         <button type="button" data-bs-target="#productCarousel" data-bs-slide-to="{{ forloop.counter0 }}" {% if forloop.first %}class="active" aria-current="true" {% endif %}aria-label="Slide {{ forloop.counter }}">
-                            <img class="d-block w-100" src="{{ product_image.image.url }}">
+                            <img class="d-block w-100" src="{{ product_image.image.url }}" alt="">
                         </button><br/>
                             {% endif %}
                         {% endfor %}
                     </div>
-                    <div class="carousel-inner">
+                    <div class="carousel-inner" style="padding-bottom: 50px;">
                         {% for product_image in product_images %}
                             {% if forloop.counter0 < 4 %}
                         <div class="carousel-item img-xs img-sm {% if forloop.first %}active{% endif %}">
-                            <img src="{{ product_image.image.url }}" class="d-block img-fit" />
+                            <img src="{{ product_image.image.url }}" class="d-block img-fit" alt=""/><br>
+                            <a href="{% url 'products:product_image' product_image.product.id product_image.sequence 'original' %}">View Full Image</a>
                         </div>
                             {% endif %}
                         {% endfor %}
