Added the ability to create assignments on a shipping page.

--- a/bespokeShipping/templates/bespoke_shipping.html
+++ b/bespokeShipping/templates/bespoke_shipping.html
@@ -231,7 +231,7 @@
 </section>
 {% endblock %}
 {% block end_body %}
-    <script src="{% get_static_prefix %}js/shipPaymentForm.js"></script>
+    <script src="{% get_static_prefix %}js/shipPaymentForm_v1.0.0.1.js"></script>
     <script src="{% get_static_prefix %}js/jquery-3.6.0.min.js"></script>
     <script src="{% get_static_prefix %}js/ship-tabs.js"></script>
     <script src="{% get_static_prefix %}js/live-chat.js"></script>
