New design files

--- a/base/templates/navbar_v02.html
+++ b/base/templates/navbar_v02.html
@@ -17,7 +17,7 @@
                 </div>
                 <div>
                     <a class="navbar-brand p-0 m-0" href="{% url 'store:index' %}">
-                        <img src="{% static 'img/Globe.png' %}" width="150" height="150" class="d-inline-block align-top" alt="">
+                        <img src="{% static 'img/GVL_logo-v2.svg' %}" width="150" height="150" class="d-inline-block align-top" alt="">
                     </a>
                 </div>
                 <div class="pl-8p">
@@ -61,7 +61,7 @@
                 <i class="icon ion-android-menu" onclick="menu_toggle()"></i>
                 <div>
                     <a class="navbar-brand p-0 m-0" href="{% url 'store:index' %}">
-                        <img src="{% static 'img/Globe.png' %}" width="150" height="150" class="d-inline-block align-top" alt="">
+                        <img src="{% static 'img/GVL_logo-v2.svg' %}" width="150" height="150" class="d-inline-block align-top" alt="">
                     </a>
                 </div>
                 {% if user.is_authenticated %}
