Fixes for payment processing

--- a/bespokeShipping/templates/quote-payment.html
+++ b/bespokeShipping/templates/quote-payment.html
@@ -59,7 +59,7 @@
 </div>
 {% endblock %}
 {% block end_body %}
-    <script src="{% get_static_prefix %}js/shipPaymentForm.js"></script>
+    <script src="{% get_static_prefix %}js/shipPaymentForm_v1.0.0.1.js"></script>
     <script >setSquareAppID();</script>
     <script src="{% get_static_prefix %}js/live-chat.js"></script>
 {% endblock %}
