--- a/base/static/css/index-styles.css
+++ b/base/static/css/index-styles.css
@@ -36,7 +36,7 @@
 }
 
 .horizontal-line span {
-    font-family: 'Maldins';
+    font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem;
     background:#fff;
     padding:0 40px;
