--- a/deliveries/templates/deliveries.html
+++ b/deliveries/templates/deliveries.html
@@ -31,8 +31,8 @@
                 {% for delivery in deliveries %}
                     <tr>
                         <th scope="row">{{ delivery.sequence }}</th>
-                        <td>{{ delivery.shipping_id }}</td>
-                        {% if delivery.shipping.status.name == 'Order Recieved' and delivery.shipping.must_go_to_barn == '0' %}
+                        <td><a href="{% url 'bespokeShipping:ship-detail' delivery.shipping_id %}">{{ delivery.shipping_id }}</a></td>
+                        {% if delivery.pickup and delivery.shipping.must_go_to_barn == '0' %}
                         <td>Pickup</td>
                         <td>
                             <p>{{ delivery.shipping.from_name }}</p>
@@ -40,7 +40,7 @@
                         </td>
                         <td>{{ delivery.shipping.from_address }}</td>
                         <td>{{ delivery.shipping.to_address }}</td></td>
-                        {% elif delivery.shipping.status.name == 'Order Recieved' and delivery.shipping.must_go_to_barn != '0' %}
+                        {% elif delivery.pickup and delivery.shipping.must_go_to_barn != '0' %}
                         <td>Pickup</td>
                         <td>
                             <p>{{ delivery.shipping.from_name }}</p>
@@ -48,7 +48,7 @@
                         </td>
                         <td>{{ delivery.shipping.from_address }}</td>
                         <td>Barn</td></td>
-                        {% elif  delivery.shipping.status.name != 'Order Recieved' and delivery.shipping.must_go_to_barn == '0' %}
+                        {% elif not delivery.pickup and delivery.shipping.must_go_to_barn == '0' %}
                         <td>Delivery</td>
                         <td>
                             <p>{{ delivery.shipping.to_name }}</p>
