--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -88,6 +88,6 @@
             </div>
         </div>
     </div>
-    <script src="{% get_static_prefix %}js/paymentForm.js"></script>
+    <script src="{% get_static_prefix %}js/paymentForm_v1.0.0.1.js"></script>
 
 {% endblock %}
