--- a/base/static/css/PowellAntique.css
+++ b/base/static/css/PowellAntique.css
@@ -55,3 +55,17 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'Colus_Regular';
+	src: url(../fonts/Colus-Regular.otf) format('otf');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url(../fonts/Montserrat-VariableFont_wght.ttf) format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
