Updated estimate and shipping copy.

--- a/products/templates/product-page.html
+++ b/products/templates/product-page.html
@@ -75,8 +75,8 @@
                         <div><h2>Sold</h2></div>
                     {% endif %}
                     <div class="pt-3" style="font-size: smaller;">
-                        <p><img src="{% get_static_prefix %}img/clock.svg"><span style="font-weight: bold;"> Estimated Time:</span> 2-3 Weeks</p>
-                        <p><img src="{% get_static_prefix %}img/box-seam.svg"><span style="font-weight: bold;"> Free Shipping:</span> Express front door shipping to the continental US, arrives 14 to 21 days from time of purchase.</p>
+                        <p><img src="{% get_static_prefix %}img/clock.svg"><span style="font-weight: bold;"> Estimated Time:</span> 5-15 Business Days</p>
+                        <p><img src="{% get_static_prefix %}img/box-seam.svg"><span style="font-weight: bold;"> Instant Shipping Costs:</span> Express white glove shipping anywhere in Texas.</p>
                         <p><img src="{% get_static_prefix %}img/truck.svg"><span style="font-weight: bold;"> Ships From:</span> Boerne, TX</p>
                     </div>
                 </div>
