--- a/products/templates/product-page.html
+++ b/products/templates/product-page.html
@@ -99,9 +99,9 @@
                     <div class="row">
                         <div class="col-12 col-sm-5">
                             <h5>Dimensions</h5>
-                            <p>Height: {{ product.dimension_height|intword }} in.</p>
-                            <p>Depth: {{ product.dimension_length|intword }} in.</p>
                             <p>Width: {{ product.dimension_width|intword }} in.</p>
+                            <p>Height: {{ product.dimension_height|intword }} in.</p>
+                            <p>Length: {{ product.dimension_length|intword }} in.</p>
                             <p>Weight: {{ product.dimension_weight|intword }} lbs.</p>
                         </div>
                         <div class="col-12 col-sm-5">
