--- a/bespokeShipping/templates/create-quote.html
+++ b/bespokeShipping/templates/create-quote.html
@@ -155,5 +155,5 @@
 
 {% block end_body %}
     <script src="{% get_static_prefix %}js/jquery-3.6.0.min.js"></script>
-    <script src="{% get_static_prefix %}js/quote_cost.js"></script>
+    <script src="{% get_static_prefix %}js/quote_cost_v1.0.0.0.js"></script>
 {% endblock %}
