--- a/bespokeShipping/templates/quote-payment.html
+++ b/bespokeShipping/templates/quote-payment.html
@@ -52,14 +52,13 @@
         {% endif %}
         <div class="row pt-3">
             <div class="col text-center">
-                <input class="btn btn-primary blue-w-orange-button rounded-3 mt-1 mb-3" id="form-submit" style="max-width: 10em;" type="submit" value="Pay" onclick="onGetCardNonce(event)">
+                <input class="btn btn-primary blue-w-orange-button rounded-3 mt-1 mb-3" id="card-button" style="max-width: 10em;" type="submit" value="Pay">
             </div>
         </div>
     </form>
 </div>
 {% endblock %}
 {% block end_body %}
-    <script src="{% get_static_prefix %}js/shipPaymentForm_v1.0.0.1.js"></script>
-    <script >setSquareAppID();</script>
+    <script src="{% get_static_prefix %}js/paymentForm_v1.1.0.0.js"></script>
     <script src="{% get_static_prefix %}js/live-chat.js"></script>
 {% endblock %}
