Add over-ride cost to quote.

--- a/bespokeShipping/templates/create-quote.html
+++ b/bespokeShipping/templates/create-quote.html
@@ -144,6 +144,9 @@
                 <p id="cost" style="font-size: larger"></p>
                 <p id="shipping-timeline"></p>
             </div>
+            <div class="row">
+                {{ quote_cost_override.as_p }}
+            </div>
             <div class="row text-center">
                 <div class="col text-center">
                     <input disabled class="btn btn-primary blue-w-orange-button rounded-3 mt-1 mb-3" id="form-submit" style="max-width: 10em;" type="submit" value="Send Quote">
