--- a/products/templates/product-page.html
+++ b/products/templates/product-page.html
@@ -9,6 +9,7 @@
 
 {% block content %}
     {% include 'similar-products.html' %}
+    {% comment %}
     <section class="product-nav">
         <div class="container">
             <div class="row">
@@ -17,6 +18,7 @@
             </div>
         </div>
     </section>
+    {% endcomment %}
     <section class="product-section body-padding">
         <div class="container">
             <div class="d-flex flex-wrap flex-lg-nowrap">
@@ -27,23 +29,19 @@
                 </div>
                 {% else %}
                 <div id="productCarousel" class="carousel carousel-dark slide lazy ms-md-120" style="padding-bottom: 50px;" data-bs-interval="false" data-bs-ride="carousel">
-                    <div class="carousel-indicators d-none d-md-inline" style="display: block; margin: 0; padding: 0; margin-left: -100px; width: 100px; z-index: 0;">
+                    <div class="carousel-indicators d-none d-md-inline" style="display: block; margin: 0; padding: 0; margin-left: -100px; top: 0; width: 100px; height: 400px; z-index: 0; overflow: hidden;">
                         {% for product_image in product_images %}
-                            {% if forloop.counter0 < 4 %}
-                        <button type="button" data-bs-target="#productCarousel" data-bs-slide-to="{{ forloop.counter0 }}" {% if forloop.first %}class="active" aria-current="true" {% endif %}aria-label="Slide {{ forloop.counter }}">
+                        <button  type="button" data-bs-target="#productCarousel" data-bs-slide-to="{{ forloop.counter0 }}" {% if forloop.first %}aria-current="true" class="active carousel-button"{% else %} class="carousel-button"{% endif %}aria-label="Slide {{ forloop.counter }}">
                             <img class="d-block w-100" src="{{ product_image.image.url }}" alt="">
                         </button><br/>
-                            {% endif %}
                         {% endfor %}
                     </div>
                     <div class="carousel-inner" style="padding-bottom: 50px;">
                         {% for product_image in product_images %}
-                            {% if forloop.counter0 < 4 %}
                         <div class="carousel-item img-xs img-sm {% if forloop.first %}active{% endif %}">
                             <img src="{{ product_image.image.url }}" class="d-block img-fit" alt=""/><br>
                             <a href="{% url 'products:product_image' product_image.product.id product_image.sequence 'original' %}">View Full Image</a>
                         </div>
-                            {% endif %}
                         {% endfor %}
                     </div>
                     <button class="carousel-control-prev" style="z-index: 1;" type="button" data-bs-target="#productCarousel" data-bs-slide="prev">
@@ -120,4 +118,18 @@
 {% endblock %}
 {% block end_body %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+    const carousel_indicators = document.getElementsByClassName('carousel-button');
+    let target_elem;
+    var myCarousel = document.getElementById('productCarousel')
+
+    console.log(carousel_indicators);
+
+    myCarousel.addEventListener('slide.bs.carousel', function (event) {
+        console.log(event.to)
+        target_elem= carousel_indicators[event.to];
+        target_elem.parentNode.scrollTop = target_elem.offsetTop - target_elem.parentNode.offsetTop;
+    })
+
+    </script>
 {% endblock %}
