--- a/bespokeShipping/templates/bespoke_shipping.html
+++ b/bespokeShipping/templates/bespoke_shipping.html
@@ -3,7 +3,7 @@
 
 {% block extra_header %}
     <script type="text/javascript" src="{{ square_js_url }}"></script>
-    <link rel="stylesheet" href="{% get_static_prefix %}css/loading.css">
+    <link rel="stylesheet" href="{% static 'css/loading.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -229,10 +229,20 @@
         </div>
     </form>
 </section>
+<section id="need-help" class="blue-background orange-font">
+    <div class="container pt-4 pb-4">
+        <div class="row">
+            <div class="col-12">
+                <h2>Need Help?</h2>
+                <p>If you have any questions, please contact us at <a href="tel:+1-830-800-0385">(830) 800-0385</a></p>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
 {% block end_body %}
-    <script src="{% get_static_prefix %}js/paymentForm_v1.1.0.0.js"></script>
-    <script src="{% get_static_prefix %}js/jquery-3.6.0.min.js"></script>
-    <script src="{% get_static_prefix %}js/ship-tabs_V1.0.0.0.js"></script>
-    <script src="{% get_static_prefix %}js/live-chat.js"></script>
+    <script src="{% static 'js/paymentForm_v1.1.0.0.js' %}"></script>
+    <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
+    <script src="{% static 'js/ship-tabs_V1.0.0.0.js' %}"></script>
+    <!--<script src="{% get_static_prefix %}js/live-chat.js"></script> -->
 {% endblock %}
